# flocking-c

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  boid.c  boid.h  boid_config.c  boid_utility.c  boid_utility.h  boids.c  boids.h  components.h  config.txt  entities.h  main.c  systems.h  v2.c  v2.h
src/: CMakeLists.txt  boid.c  boid_config.h  components.h  entities.c  main.c  spatial.h  vector_aux.c  vector_aux.h
